tf-eks/network.tf
############################
# VPC
############################
resource "aws_vpc" "anand_eks_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "anand-eks-vpc"
  }
}

############################
# Subnets (2 public subnets)
############################
resource "aws_subnet" "anand_eks_subnet" {
  count = 2

  vpc_id     = aws_vpc.anand_eks_vpc.id
  cidr_block = cidrsubnet(aws_vpc.anand_eks_vpc.cidr_block, 8, count.index)

  availability_zone       = element(["ap-northeast-1a", "ap-northeast-1c"], count.index)
  map_public_ip_on_launch = true

  tags = {
    Name = "anand_eks_subnet-${count.index}"
  }
}

############################
# Internet Gateway
############################
resource "aws_internet_gateway" "anand_eks_igw" {
  vpc_id = aws_vpc.anand_eks_vpc.id

  tags = {
    Name = "anand-eks-igw"
  }
}

############################
# Route Table
############################
resource "anand_eks_route_table" "anand_eks_rt" {
  vpc_id = aws_vpc.anand_eks_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.anand_eks_igw.id
  }

  tags = {
    Name = "anand-eks-route-table"
  }
}

############################
# Route Table Association
############################
resource "aws_route_table_association" "anand_eks_rt_assoc" {
  count = 2

  subnet_id      = aws_subnet.anand_eks_subnet[count.index].id
  route_table_id = aws_route_table.anand_eks_rt.id
}

############################
# Security Groups
############################

# EKS Cluster Security Group
resource "aws_security_group" "anand_eks_cluster_sg" {
  vpc_id = aws_vpc.anand_eks_vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-cluster-sg"
  }
}

# Worker Node Security Group
resource "aws_security_group" "anand_eks_node_sg" {
  vpc_id = aws_vpc.anand_eks_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "anand-eks-node-sg"
  }
}
